demo template added

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width"/>
-    <title>@@name Help Guide | ThemeBeans</title>
+    <title>MyFramework Help Guide | ThemeBeans</title>
     <style type="text/css">
         body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
             margin: 0;
@@ -252,8 +252,10 @@
 <body>
     <section id="Menu">
         <header>
-            <h1>@@name</h1>
-            <p>Set-up & general guide to help you get the most out of your new WordPress theme. If you are still having trouble after reading this guide, <a href="@@supportUrl">contact our help team</a>.</p>
+            <h1>MyFramework</h1>
+            <p>This is simple php framework</p>
+            <p>Sample layout template you can find in views/layouts/main.html</p>
+            <p>Page templates in views/*.html</p>
         </header>
         <nav>
             <a href="/" target="blank">Main</a>
@@ -267,7 +269,7 @@
     </section>
     <section id="Credits">
         <footer>
-            <a href="@@demoUrl" target="blank">@@name</a>, a <a href="#" target="blank">MyFramework</a> developed by <a href="#" target="blank">ptflp</a>
+            <a href="@@demoUrl" target="blank">MyFramework</a>, a <a href="#" target="blank">simple framework</a> developed by <a href="#" target="blank">ptflp</a>
         </footer>
     </section>
 
