--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width"/>
-    <title>MyFramework Help Guide | ThemeBeans</title>
+    <title>MyFramework simple framework</title>
     <style type="text/css">
         body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
             margin: 0;
