--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -258,7 +258,7 @@
             <p>Page templates in views/*.html</p>
         </header>
         <nav>
-            <a href="/" target="blank">Main</a>
+            <a href="/" >Main</a>
         </nav>
         <nav>
             <a href="/news">News</a>
